--- a/_layout.jade
+++ b/_layout.jade
@@ -47,7 +47,7 @@ html(lang="en")
             //- Footer
 
             footer.footer
-                .footer-list
+                nav.footer-list.text-meta-small
                     span.footer-item &copy; 2015-#{new Date().getFullYear()} 
                     a.footer-item(href="/") #{site.toUpperCase()}
                     a.footer-item(href="/about") About me
