--- a/assets/css/_typography.sass
+++ b/assets/css/_typography.sass
@@ -2,20 +2,29 @@
 //- ⚡️ TYPOGRAPHY
 //- ----------------------------------
 
-%text
 // Text
+
+p, .list, .quote
+    @extend .block
     font: normal normal 2.2rem/#{1.375} $font-primary
 
-%text-meta
+    a:not(.button)
+        border-bottom: 2px solid
+        transition: padding 0.1s ease
+
+        &:hover
+            padding-bottom: 1px
+
+.text-meta
     font: normal normal 1.6rem/#{1.375} $font-tertiary
 
-%text-meta-small
+.text-meta-small
     font: normal normal 1.3rem/#{1.375} $font-tertiary
 
-%text-code
+.text-code
     font: normal 600 1.4rem/#{1.75} $font-code
 
-%text-label
+.text-label
     font: normal bold 1.4rem/#{1} $font-secondary
     letter-spacing: 1px
     text-transform: uppercase
