Make content wider for blog posts with narrow hero image

--- a/assets/css/_layout/_article.sass
+++ b/assets/css/_layout/_article.sass
@@ -6,7 +6,10 @@
     padding: 0 50px 50px 75px
 
     @media (min-width: #{$breakpoint-m})
-        width: 50%
+        width: 55%
+
+        &--narrow
+            width: 50%
 
         &--full
             width: 85%
@@ -61,7 +64,7 @@
     padding: 50px 10% 50px 75px
 
     @media (min-width: #{$breakpoint-m})
-        width: 50%
+        width: 60%
 
     @media (max-width: #{$breakpoint-m})
         width: 100%
