--- a/_layout.jade
+++ b/_layout.jade
@@ -36,7 +36,9 @@ html(lang="en")
         link(rel="stylesheet" href="/assets/css/style.css")
 
     body
-        main(role="main" class=(current.path[0] == 'index') ? 'home' : '')
+        main(role="main" class=(current.path[0] == "index") ? "home" : "")
+        
+            //- Main Content
         
             if current.path[0] == 'index'
                 !=yield
