--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -1,21 +1,3 @@
-// Paragraphs
-
-p
-    @extend .block, %text
-
-    a
-        @extend .link
-
-
-// Links
-
-.link:not(.button)
-    border-bottom: 2px solid
-    transition: padding 0.1s ease-out
-
-    &:hover
-        padding-bottom: 1px
-
 //- ----------------------------------
 //- ⚡️ COMPONENTS
 //- ----------------------------------
@@ -85,7 +67,7 @@ code
 
 // Images
 
-.image-inline
+.image
     @extend .block
 
 .image-caption
@@ -94,14 +76,15 @@ code
 
 // Quotes
 
-.blockquote
+.quote
     @extend .block
 
-.blockquote-body
+.quote-body
     font-size: 2.6rem
     font-style: italic
     margin-bottom: 20px
 
+.quote-footer
     font-weight: bold
     text-transform: uppercase
 
@@ -119,7 +102,7 @@ code
 
             &:before
                 @include position(absolute, top, left, auto, -35px)
-                content: counter(li) '.'
+                content: counter(li) "."
                 counter-increment: li
                 font: normal bold 2.4rem/#{1} $font-secondary
                 width: 25px
