--- a/blog/custom-console-logging-emoji.jade
+++ b/blog/custom-console-logging-emoji.jade
@@ -4,7 +4,7 @@ p Debugging JavaScript can be painful and often means spending hours looking at 
 
 p #[a(href="https://github.com/" + profiles.github + "/console-dot-emoji" target="_blank") Go here] to head straight to the code on GitHub.
 
-+image("emoji-console_preview.jpg")
++image("emoji-console_preview.jpg", false, "Preview of console")
 
 h2 Better Programming with Emoji
 
