--- a/blog/dynamic-duotone-svg-jade.jade
+++ b/blog/dynamic-duotone-svg-jade.jade
@@ -12,7 +12,7 @@ p If you've ever played around with the color channels in Photoshop or a similar
 
 p You're probably familiar with RGB model, in which red, green and blue are added in different proportions to produce more colors.
 
-+image("duotone_rgb.jpg")
++image("duotone_rgb.jpg", false, "Illustration of RGB color model")
 
 p The darkest color, black, represents the absence of R, G and B  (#[code rgba(0, 0, 0)]) and the lightest color, white, the combination of all of them (#[code rgba(255, 255, 255)]). All other colors are created by mixing different proportions of red, green and blue. For grayscale images, the R, G, and B values are always equal – take #[code rgba(85, 85, 85)] for example, which maps to a #[code #555] gray.
 
