--- a/blog/guide-everyday-life-minimalism.jade
+++ b/blog/guide-everyday-life-minimalism.jade
@@ -30,7 +30,7 @@ p Productivity does not mean doing more, it means doing things more efficiently.
 
 p Being lazy and thus opting for the most efficient, convenient and sloth-friendly solution removes the unpleasant time-wasters from your life and lets you focus on the things that are actually important to you. Here you go, that's minimalism right there.
 
-+image("minimalism_sloth.jpg", false, true)
++image("minimalism_sloth.jpg", false, "Venn diagram of perfect self outside of reality, and inner sloth within reality")
 
 h2 Removing friction and frustration (while spending less)
 
@@ -40,7 +40,7 @@ p What I'm saying is, it's not about simply #[em buying more stuff]. Looking at 
 
 p Shopping for clothes is a good example: I used to buy a lot of cheap stuff on a whim, like 25-euro shoes. They weren't really what I was looking for, but hey, they were only 25 euros and pretty nice. After a few months, they'd either break or turn out to be impractical and I'd replace them with a new 25-euro pair. Over the course of a year, I'd easily spend over 200 euros on mediocre shoes and never even owned more than one pair at the same time. This was a common pattern in my life. I'd buy cheap rings (that I would wear twice before they changed colour and started leaving green marks on my fingers), pretty notebooks (who am I kidding, I spend all day on my computer and only ever make digital notes) and a bunch of lipsticks (I never wear lipstick, it's inconvenient and makes my lips look weird).
 
-+image("minimalism_staples.jpg", false, true)
++image("minimalism_staples.jpg", false, "Diagram: special items and basics & staples")
 
 h2 Shopping with intent: the uniform
 
@@ -50,7 +50,7 @@ p I don't particularly like going shopping and whenever I did, it was always dis
 
 p Before I started planning my uniform, I made a mental list of the stuff I actually wear: a pair of sweatpants, 20den tights and socks, loose shorts, loose t-shirt-style dresses made from thin fabrics, tight high-waisted jeans with leather belts, t-shirts with loose sleeves, a cardigan, a leather jacket, platform boots and delicate silver jewellery. Those are the things that I like to wear at home, when I'm out and about running errands, at work meetings and to a bar or a club. I kept adding examples to my "style moodboard" folder that I keep on #[a(href=url + "/blog/switching-to-desktop-apps" target="_blank") Pixave] and the result looked something like this:
 
-+image("minimalism_moodboard.jpg")
++image("minimalism_moodboard.jpg", false, "Moodboard of minimalist outfits and items")
 
 p For the first time in years, I went out to buy clothes with an actual shopping list. And for the first time in years, I finally have "something to wear" every time I open my closet.
 
