--- a/blog/switching-to-desktop-apps.jade
+++ b/blog/switching-to-desktop-apps.jade
@@ -16,13 +16,13 @@ p Before I came across #[a(href="https://polymail.io" target="_blank") Polymail]
 
 p Polymail immediately caught my eye and, most importantly, it seamlessly integrated with Gmail. It also offers a bunch of handy features, like email tracking (I was #[em so] happy when I finally got to ditch those spammy Chrome extensions I used before), a "send later" option (for those work emails you write at 4am), a "read later" button that makes emails reappear in the inbox after a certain set time, and a beautiful minimalistic UI with a lot of attention to detail. Polymail is still in private beta but you get in by #[a(href="https://polymail.io" target="_blank") signing up] on their website or #[a(href="https://twitter.com/PolymailApp" target="_blank") asking nicely] on Twitter.
 
-+image("desktopapps_polymail.jpg")
++image("desktopapps_polymail.jpg", false, "Screenshot of Polymail")
 
 h2 2. Leaf
 
 p After Google killed Google Reader — and yes, I'm still bitter about this — I eventually switched to #[a(href="https://feedly.com" target="_blank") Feedly]. #[a(href="#" target="_blank") Leaf] lets you login with your Feedly account and offers a very straightforward and beautiful reading experience. My favourite view is the "clutter-free article" mode – it downloads the full article and displays a reading-friendly version. Even if the RSS feed only displays the excerpt, now I can finally read the entire post without having to leave my feed reader.
 
-+image("desktopapps_leaf.jpg")
++image("desktopapps_leaf.jpg", false, "Screenshot of Leaf")
 
 h2 3. Pocket
 
@@ -30,7 +30,7 @@ p A big issue with Evernote was that I saved #[em everything] I found remotely i
 
 p #[a(href="https://getpocket.com" target="_blank") Pocket], formerly Read It Later, is mostly a bookmark organiser, but the premium version also saves and downloads the articles to make sure you can still access the original article, even when it gets changed or removed. While the desktop UI is pretty but fairly basic (I'd love to see more options for bulk editing and different display modes in the future), it does its job and helps me be more selective about the stuff I bookmark. It also integrates amazingly well: I can obviously bookmark articles straight from my browser, but also send them to Pocket from Leaf or any other app via the native share button, from both my computer and my phone.
 
-+image("desktopapps_pocket.jpg")
++image("desktopapps_pocket.jpg", false, "Screenshot of Pocket")
 
 h2 4. Pixave
 
@@ -38,7 +38,7 @@ p I know, I know, #[em another] desktop app to replace Evernote. While I initial
 
 p #[a(href="http://www.littlehj.com" target="_blank") Pixave] is an image manager for designers. It supports, previews, converts and exports all common file formats including PSD, AI, Sketch and PDF, lets you organise your files with folders, collections and tags, filters your resources by colour and comes with a little screencap tool to easily snap website screenshots. I usually have the "Pixave Mini" window open in the background so I can drag and drop files on there anytime. The only thing that's missing to make it the go-to web development app for me: It only supports image files and PDFs so there's obviously no decent way to use it to also manage other non-image resources like code snippets. #[a(href="https://www.renfei.org/snippets-lab/" target="_blank") Snippets Lab] looks promising for that but I'm sort of hesitant to use yet another app for such a specific task.
 
-+image("desktopapps_pixave.jpg")
++image("desktopapps_pixave.jpg", false, "Screenshot of Pixave")
 
 +divider
 
