--- a/blog/the-ultimate-guide-static-websites-harp-jade.jade
+++ b/blog/the-ultimate-guide-static-websites-harp-jade.jade
@@ -28,7 +28,7 @@ h3 The skeleton template
 
 p To make things easier, I've put together a nice-looking boilerplate designed for a modern, minimal blog. It includes a bunch of example components and functions, easily extendable CSS and a bunch of documentation and explanations throughout the code.
 
-+image("harp-jade_skeleton.jpg")
++image("harp-jade_skeleton.jpg", false, "Preview of skeleton blog template")
 
 p.block-center
     +button(href="https://github.com/" + profiles.github + "/pretty-harp-jade-skeleton/" target="_blank") View Skeleton Theme on GitHub
