--- a/blog/the-ultimate-guide-static-websites-jekyll.jade
+++ b/blog/the-ultimate-guide-static-websites-jekyll.jade
@@ -102,7 +102,7 @@ p The #[a(href="https://github.com/jekyll/jekyll/wiki/Sites" target="_blank") Je
 
 p To get you started, I've put together a basic skeleton template for a personal blog. It includes all the required files, a nice and clean structure, examples for all the cool stuff you can do (layouts, includes, custom logic) and descriptions here and there to help you understand what all those files are about. I only added the most basic formatting so the rest is up to you.
 
-+image("jekyll_skeleton.jpg")
++image("jekyll_skeleton.jpg", false, "Screenshot of skeleton blog template")
 
 p.block-center
     +button(href="https://github.com/" + profiles.github + "/pretty-jekyll-skeleton/" target="_blank") View Skeleton Theme on GitHub
@@ -215,7 +215,7 @@ h3 The most important commands
     +item #[code jekyll build --safe] — disable custom plugins
     +item #[code jekyll serve] — creates a preview of the site at #[code http:&#47;&#47;localhost:4000/]
 
-+image("jekyll_terminal.jpg", false, true)
++image("jekyll_terminal.jpg", false, "Screenshot of terminal output after successful serve")
 
 p Of course you can also combine the flags. #[code jekyll serve --drafts --safe] for example previews your site with drafts and without custom plugins. The simplicity of the commands makes it very easy to integrate the build process into your existing workflow – and a lot of people have created excellent tools based on it, for example this very versatile #[a(href="https://packagecontrol.io/packages/Jekyll" target="_blank") Jekyll Package for Sublime Text] that lets you build your site straight out of your editor and adds a bunch of helpful shortcuts.
 
