--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -5,6 +5,7 @@
 $color-bg: #fff !default
 $color-text: #222 !default
 $color-grey: #fafafa !default
+$syntax-highlighting: ( comment: #666, tag: #02bd80, number: #6b14c8, selector: #006cc0, operator: #fa354c, function: #f74288, keyword: #0abebb, regex: #febb51 )
 
 $font-primary: 'EB Garamond', 'Adobe Garamond Pro', Garamond, Georgia, 'Times New Roman', serif !default
 $font-secondary: 'GT Walsheim', Helvetica, Arial, sans-serif !default
