--- a/_includes/_social-icons.jade
+++ b/_includes/_social-icons.jade
@@ -4,8 +4,8 @@
 
 include _mixins
 
-.list-inline
     a(href="https://twitter.com/#{profiles.twitter}" target="_blank" aria-label="Twitter")
+.o-inline-list
         +icon("twitter")
 
     a(href="https://medium.com/@#{profiles.medium}" target="_blank" aria-label="Medium")
