--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -14,16 +14,13 @@ $font-code: 'Source Code Pro', Consolas, 'Andale Mono', Menlo, Monaco, Courier, 
 
 $breakpoint-m: 800px
 
-@import mixins
 
+@import _base/mixins
 @import _base/reset
 @import _base/fonts
-@import _base/prism
 @import _base/animations
 
-@import typography
+@import layout
+@import utilities
+@import objects
 @import components
-
-@import _layout/page
-@import _layout/article
-@import _layout/teasers
