--- a/assets/css/_base/_mixins.sass
+++ b/assets/css/_base/_mixins.sass
@@ -1,24 +1,17 @@
 //- ----------------------------------
-//- ⚡️ MIXINS
+//- ⚡️ BASE > MIXINS
 //- ----------------------------------
+
+//- Size shorthand
 
 @mixin size($width, $height: $width)
   height: $height
   width: $width
 
+
+//- Position shorthand
+
 @mixin position($position, $pos-y, $pos-x, $pos-y-value, $pos-x-value)
   position: $position
   #{$pos-y}: $pos-y-value
   #{$pos-x}: $pos-x-value
-
-@mixin flex($justify-content, $align-items: false, $flow: false)
-    display: flex
-
-    @if $justify-content != false
-        justify-content: $justify-content
-
-    @if $align-items != false
-        align-items: $align-items
-
-    @if $flow != false
-        flex-flow: $flow
