--- a/index.jade
+++ b/index.jade
@@ -5,7 +5,8 @@
 include _includes/_mixins
 
 header.header(role="banner")
-    a.text-label(href="/about") About me
+header.o-header.u-text-label(role="banner")
+    a(href="/about") About me
     include _includes/_logo
     a.text-label(href="https://twitter.com/" + profiles.twitter target="_blank") Twitter
 
