--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -2,9 +2,9 @@
 //- ⚡️ STYLE
 //- ----------------------------------
 
-$color-bg: #fff !default
-$color-text: #222 !default
-$color-grey: #fafafa !default
+$color-back: #fff !default
+$color-front: #222 !default
+$color-subtle: #fafafa !default
 $syntax-highlighting: ( comment: #666, tag: #02bd80, number: #6b14c8, selector: #006cc0, operator: #fa354c, function: #f74288, keyword: #0abebb, regex: #febb51 )
 
 $font-primary: 'EB Garamond', 'Adobe Garamond Pro', Garamond, Georgia, 'Times New Roman', serif !default
