Include mixins in all blog posts

--- a/blog/5-things-i-learned-from-working-in-print.jade
+++ b/blog/5-things-i-learned-from-working-in-print.jade
@@ -1,3 +1,5 @@
+include ../_includes/_mixins
+
 p For four years, I worked for a popular print magazine, developing marketing strategies, selling advertising space and coordinating partnerships. Being a monthly publication, we often jokingly compared it to giving birth once a month: at first you get all excited, then it becomes super hard and you want to die and then all of a sudden it's over, you're happy and hold the result in your hands and already forgot about all of the pain. (I've never had a baby, but that's what I sort of imagine it to be like.) It was stressful but exciting and surprisingly, it completely changed the way I look at the internet today.
 
 h2 1. Quality wins.
