Add external link mixin to handle target="_blank" with rel="noopener"

--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -121,6 +121,13 @@ mixin code(language)
             block
 
 
+//- External Link
+
+mixin a(url, trusted)
+    a(href=url target="_blank" rel=(!trusted) ? "noopener nofollow" : "")&attributes(attributes)
+        block
+
+
 //- Button
 
 mixin button
